<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">INM</string>
    <string name="title_contact_detail">Contact Detail</string>
    <string name="contact_image">contact_image</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>

    <string-array name="category">
        <item>Family</item>
        <item>Friends</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Acquaintances</item>
    </string-array>

    <string name="category_label">Category</string>
    <string name="importance_label">Importance</string>
    <string name="search_title">Search</string>
    <string name="title_day_list">Days</string>
    <string name="title_day_detail">Day Detail</string>
    <string name="title_hour_list">Hours</string>
    <string name="title_contact_list">Contacts</string>
    <string name="title_hour_detail">Hour Detail</string>
    <string name="title_activity_hour_list">HourListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="me">"I'm "</string>

    <string-array name="ambusy">
        <item>busy</item>
        <item>free</item>
        <item>enjoying</item>
        <item>relaxing</item>
    </string-array>

    <string name="at">at</string>

    <string-array name="places">
        <item>work</item>
        <item>school</item>
        <item>home</item>
        <item>outside</item>
    </string-array>
    <string-array name="important_levels">
        <item>Very Important</item>
        <item>Important</item>
        <item>Some</item>
        <item>Unimportant</item>
        <item>Nuisance</item>
    </string-array>
    <string-array name="medium">
        <item>Calls</item>
        <item>Texts</item>
        <item>Whatsapps</item>
        <item>Facebooks</item>
        <item>Emails</item>
    </string-array>
    <string-array name="notifications">
        <item>Ring Loudly</item>
        <item>Ring Softly</item>
        <item>Vibrate</item>
        <item>Ignore</item>
    </string-array>

    <string name="ok_button">""Ok!"</string>
    <string name="cancel_button">Cancel?</string>
    <string name="title_rule_list">Rules</string>
    <string name="title_rule_detail">Rule Detail</string>
    <string name="if_i_am">If I\'m</string>
    <string name="and">and a</string>
    <string name="contact">contact from</string>
    <string name="then">"then, "</string>

    <string name="add_rule">Add Rule</string>
    <string name="help">Help</string>
    <string name="rules">"Rules"</string>
    <string name="schedule">Schedule</string>
    <string name="contacts">Contacts</string>
</resources>