<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lk.apiit.isei2014.nns.inm.ui.contacts.ContactDetailActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <QuickContactBadge
        android:id="@android:id/icon"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_contact_picture_holo_light" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:padding="25dp"
                android:id="@+id/ContactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:padding="25dp"
                android:id="@+id/contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_label" 
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp"/>
    <Spinner
        android:paddingLeft="25dp"
        android:paddingBottom="25dp"
        android:paddingRight="25dp"
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/importance_label" 
        android:paddingLeft="25dp"
        android:paddingTop="25dp"
        android:paddingRight="25dp"/>
    
    <SeekBar
     android:paddingLeft="25dp"
        android:paddingBottom="25dp"
        android:paddingRight="25dp"
        android:id="@+id/importances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>